Add image and update index file.

--- a/PortfolioPF/PortfolioPF.csproj
+++ b/PortfolioPF/PortfolioPF.csproj
@@ -102,6 +102,7 @@
     <Content Include="Assets\soaf3.png" />
     <Content Include="Assets\SunsetHills.png" />
     <Content Include="Assets\SunsetHills3.png" />
+    <Content Include="Assets\Tetons.png" />
     <Content Include="Assets\themeforest.jpg" />
     <Content Include="Assets\waterfall.png" />
     <Content Include="Content\agency.css" />
